@@ -1,3 +1,4 @@
+* Add sortable_values in tools
 * Remove default colors on graph and calendar
 * Add model, record and records attributes on Wizard
 * Check read access of wizard records
